--- a/App/package.json
+++ b/App/package.json
@@ -13,17 +13,17 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.6.8",
-    "expo": "^51.0.0",
-    "expo-constants": "~16.0.1",
-    "expo-secure-store": "~13.0.2",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "~3.31.1",
+    "expo": "~54.0.30",
+    "expo-constants": "*",
+    "expo-secure-store": "*",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "@types/react": "~18.2.79",
-    "typescript": "~5.3.3"
+    "@types/react": "~19.1.10",
+    "typescript": "*"
   }
 }
