--- a/App/app.json
+++ b/App/app.json
@@ -25,7 +25,7 @@
     "extra": {
       "apiUrl": "https://auralink-app-production.up.railway.app/api",
       "apiBase": "https://auralink-app-production.up.railway.app",
-      "webUrl": "https://auralink-app.vercel.app",
+      "webUrl": "https://auralink-app-2u3p.vercel.app",
       "eas": {
         "projectId": "00000000-0000-0000-0000-000000000000"
       }
